--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,19 @@
                     <downloadSources>true</downloadSources>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.ossindex.maven</groupId>
+                <artifactId>ossindex-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                    <id>audit-dependencies</id>
+                    <phase>validate</phase>
+                    <goals>
+                        <goal>audit</goal>
+                    </goals>
+                    </execution>
+                </executions>
+                </plugin>            
         </plugins>
         <pluginManagement>
             <plugins>
