--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <clm.serverUrl>http://localhost:8070</clm.serverUrl>
-        <clm.applicationId>test</clm.applicationId>        
+        <!-- <clm.serverUrl>http://localhost:8070</clm.serverUrl>
+        <clm.applicationId>test</clm.applicationId> -->
     </properties>
 
     <build>
@@ -132,6 +132,7 @@
             <plugin>
                 <groupId>org.sonatype.ossindex.maven</groupId>
                 <artifactId>ossindex-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                     <id>audit-dependencies</id>
@@ -145,6 +146,12 @@
         </plugins>
         <pluginManagement>
             <plugins>
+                <!-- OSS INDEX Plugin -->
+                <plugin>
+                    <groupId>org.sonatype.ossindex.maven</groupId>
+                    <artifactId>ossindex-maven-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
                 <!-- Maven Clean Plugin -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -329,7 +336,7 @@
                         </lifecycleMappingMetadata>
                     </configuration>
                 </plugin>
-                <plugin>
+                <!-- <plugin>
                     <groupId>com.sonatype.clm</groupId>
                     <artifactId>clm-maven-plugin</artifactId>
                     <version>2.7.0-01</version>
@@ -339,7 +346,7 @@
                         <applicationId>${clm.applicationId}</applicationId>
                         <stage>build</stage>
                     </configuration>
-                </plugin>
+                </plugin> -->
             </plugins>
         </pluginManagement>
     </build>
